Fix: Apply max-height in vh to .ol-popup-content to prevent overflow (#355)

--- a/GIFrameworkMaps.Web/wwwroot/css/map.css
+++ b/GIFrameworkMaps.Web/wwwroot/css/map.css
@@ -640,7 +640,6 @@
   bottom: 12px;
   left: -50px;
   min-width: 260px;
-  max-height: 80vh;
 }
 @media (min-width: 768px) {
   .giframeworkMapContainer .ol-popup {
@@ -681,7 +680,7 @@
 }
 
 .giframeworkMapContainer .ol-popup-content {
-  max-height: 500px;
+  max-height: 80vh;
   max-width: 400px;
   overflow-y: auto;
 }
